Add docker db shizzle

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=AirBNB;User Id=sa;password=DjhKBwdzVftaZufgdKkpof;Trusted_Connection=False"
   }
 }
