--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=AirBNB;User Id=sa;password=DjhKBwdzVftaZufgdKkpof;Trusted_Connection=False"
+    "Default": "Server=localhost;Database=AIRBNB2022;User Id=sa;password=DjhKBwdzVftaZufgdKkpof;Trusted_Connection=False"
   }
 }
